@@ -296,12 +296,18 @@ Space characters are not allowed in the
 
 .TP 
 \f3\-S \fP\f3,\fP \f3\-\-starttime\fP
-Select jobs eligible after the specified time.
+Select jobs eligible after the specified time. Default is midnight of
+current day.
 Valid time formats are...
 HH:MM[:SS] [AM|PM]
 MMDD[YY] or MM/DD[/YY] or MM.DD[.YY]
 MM/DD[/YY]-HH:MM[:SS]         
 YYYY-MM-DD[THH[:MM[:SS]]]
+
+.TP 
+\f3\-T \fP\f3,\fP \f3\-\-truncate\fP
+Truncate time.  So if a job started before --starttime the start time
+would be truncated to --starttime.  The same for end time and --endtime.
 
 .TP 
 \f3\-u \fP\f2uid_list\fP\f3,\fP  \f3\-\-uid\fP\f3=\fP\f2uid_list\fP \f3\-\-user\fP\f3=\fP\f2user_list\fP
